Update and fix progress-report-2 post

--- a/_posts/2021-11-08-submit.md
+++ b/_posts/2021-11-08-submit.md
@@ -5,13 +5,7 @@ categories: [Updates, "Checkpoint"]
 tags: [updates,checkpoint]     # TAG names should always be lowercase
 ---
 
-# Summary Since October 7 Checkpoint #1
-
-### Overview - OpenQASM 3.0 Reference Implementation <br> 
-- Mentor: Jack Woehr @jwoehr  <br>
-- Team: Abeer Vaishnav @AbeerVaishnav13 | Adrien Suau @nelimee | Vishal  Bajpe @mrvee-qC  <br>
-- Github Repo: https://github.com/mentor-fall2021-openqasm  <br>
-- Website: https://mentor-fall2021-openqasm.github.io  <br>
+# Summary Since October 7 Checkpoint #1  
 
 ### Progress Summary
 
@@ -33,11 +27,8 @@ The version 1 of the implementation showcased on October 7 - Checkpoint #1 now h
 
 - Reconstruct and restart current repository to depend on openqasm package rather than forks of openqasm repository and outsource package dependencies for openasm parser, ast and other components
 - Work in support of PR #295 and fulfillment of Issue #296.
-- Take inspirations from discussions in Issue #296 and start writing to invent own grammar and connect it to openpulse, eventually towards an implementation for translating to qiskit-pulse/ qiskit-pulse builder syntax. 
+- Take inspirations from discussions in Issue #296 and start writing to invent own grammar and connect it to openpulse, eventually towards an implementation for translating to qiskit-pulse/ qiskit-pulse builder syntax.
 - Take opinions and hints from openpulse invested parties in the discussion in Issue #296 while creating it along. Have received guidance support from openpulse closed group
 
-
-# Checkpoint #2 Document
-<object data="assets/pdf/QAMPCheckpoint#2.pdf" width="850" height="1000" type='application/pdf'></object>
-
-
+# Checkpoint \#2 Document <br>  
+<object data="/assets/pdf/QAMPCheckpoint2.pdf" width="800" height="980" type='application/pdf'></object>
